# protoVoice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.fish  README.md  STATUS.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  voices.py
.github/workflows/: docker-publish.yml  docs.yml  prepare-release.yml  release.yml
.proto/skills/: _README.md  example_chef.md
a2a/: client.py  registry.py  server.py
agent/: backchannel.py  bargein.py  delegates.py  delivery.py  echo_guard.py  filler.py  micro_ack.py  prosody.py  session_store.py  tools.py  tracing.py  user_state.py
auth/: __init__.py  context.py  infisical.py  users.py
config/: SOUL.md  agents.yaml  delegates.yaml  users.example.yaml
config/skills/: chef.yaml  josh.yaml  voice-01.yaml  voice-02.yaml  voice-03.yaml  voice-04.yaml
docs/: index.md
docs/.vitepress/: config.mts
docs/explanation/: architecture.md  browser-first-inference.md  duplex-design.md  index.md  natural-fillers.md  two-model-split.md  why-pipecat.md
docs/guides/: a2a-integration.md  audio-handling.md  backchannels.md  benchmarking.md  build-tools.md  clone-a-voice.md  delivery-policies.md  external-llm.md  index.md  no-fish.md  personas-and-skills.md  switch-tts-backend.md  use-localai.md  users.md  verbosity.md
docs/reference/: agent-registry.md  delegates.md  environment-variables.md  http-api.md  index.md  memory.md  metrics.md  orb-visualizer.md  pipeline-shape.md  tools.md  tracing-contract.md  tracing.md  tts-backends.md  webrtc-protocol.md
docs/tutorials/: docker-compose.md  first-voice-session.md  index.md
memory/: window.py
scripts/: bench.py  rewrite-release-notes.mjs  version.py
services/fish-openai-shim/: Dockerfile  README.md  server.py
skills/: loader.py  models.py
static/: index.html  viz.js
tests/: conftest.py  test_endpoints.py  test_tracing.py  test_users.py
voice/: agent.py  chunker.py  lifecycle.py  llm.py  react_agent.py  stt.py  tts.py
voice/tts/: __init__.py  fish.py  kokoro.py  openai.py
web/: index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  glsl.d.ts  index.css
web/src/auth/: useWhoami.ts  whoami.ts
web/src/components/: Drawer.tsx
web/src/lib/: api.ts  useCoarsePointer.ts  useMediaQuery.ts
web/src/plugins/: PluginHost.tsx  registry.ts
web/src/voice/: VoiceStateBridge.tsx  (+3 more)
(+70 files in other folders)
