[project]
name = "protovoice"
version = "0.1.0"
description = "Sub-200ms real-time voice agent — Whisper STT + Qwen LLM + Kokoro TTS"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate",
    "gradio>=5.0",
    "fastrtc[vad]>=0.0.10",
    "kokoro>=0.9",
    "httpx",
    "soundfile",
    "soxr",
    "numpy",
    "vllm>=0.18",
    "peft",
    "duckduckgo-search>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
protovoice = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
